services/web/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ladesaro-web
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: ladesaro-web
          image: "registry.ladesa.com.br/web:production"
