services/web/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ladesa-ro-web-ingress
spec:
  rules:
    - host: ladesa.com.br
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ladesa-ro-web
                port:
                  name: web
